namespace BazaRoslin.Model {
    public interface IDisplayable {
        string ToDisplay { get; }
    }
}